[FIX] website: backdrop no block modal on safari iOS
Several themes (theme_avantgarde, theme_clean, theme_enark,
theme_graphene) have this CSS code:

```
 #wrapwrap { overflow-x: hidden; }
```

This is an issue for iOS because the combination of:

- -webkit-overflow-scrolling: touch;
- z-index
- overflow-x: hidden

seems to break expected stacking contexts and the backdrop of modal get
in front of the modal making it unusable.

eg. the modal for paying an order in /my/orders/, safari IOS make it
impossible to do a payment because content inside modal is not accessible.

This commit removes the "overflow-x: hidden" from the equation which
seems to fix things (probably that safari added stacking context for
one reason or another, then the z-index of the backdrop was higher than
the one of the "overflow-x: hidden" element and got over the modal
content).

opw-2298404
closes #57643

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -79,6 +79,11 @@ $-font-numbers: (
     }
 }
 
+// fix Safari iOS backdrop stacking context order issue
+body.modal-open #wrapwrap {
+    overflow-x: visible;
+}
+
 .navbar {
     @if ($o-theme-navbar-font != $o-theme-font) {
         font-family: $o-theme-navbar-font;
